# OpenCorde.com

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PASSWORD_RESET_SYSTEM.md  QUICK_START_PASSWORD_RESET.md  READ_STATE_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  ReadMeFirst.md  browser_test.py  decisions.md  docker-compose.yml  fix_goto2.py  package-lock.json  patch_mc.py  project-map.yaml  quality-gate.md  tasks-future.md  tasks-weeks-3-8.md  tasks-weeks-9-12.md  tasks.md
client/: .prettierignore  (+8 more)
client/src-tauri/: Cargo.toml  INDEX.md  build.rs  crypto.rs  lib.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: README.md
client/src-tauri/src/: lib.rs  main.rs  mobile.rs  notifications.rs  tray.rs
client/src-tauri/src/commands/: INDEX.md  auth.rs  crypto.rs  file_crypto.rs  mod.rs  settings.rs
crates/opencorde-api/: Cargo.toml  INDEX.md
crates/opencorde-api/src/: automod.rs  config.rs  email.rs  emoji_helpers.rs  error.rs  federation.rs  identity.rs  jwt.rs  lib.rs  main.rs  push_sender.rs  register.rs
crates/opencorde-api/src/middleware/: INDEX.md  auth.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/opencorde-api/src/routes/: Cargo.toml  INDEX.md  admin.rs  audit_log.rs  bridge.rs  channel_overrides.rs  data_export.rs  discovery.rs  emojis.rs  health.rs  helpers.rs  invites.rs  key_packages.rs  members.rs  mod.rs  notification_settings.rs  onboarding.rs  permission_check.rs  permissions.rs  pins.rs  push.rs  reactions.rs  read_state.rs  roles.rs  search.rs  soundboard.rs  unfurl.rs  upload_validation.rs  uploads.rs  users.rs  webhooks.rs
crates/opencorde-api/src/routes/admin/: handlers.rs  rate_limit.rs  types.rs
crates/opencorde-api/src/routes/auth/: INDEX.md  handlers.rs  mod.rs  password_reset.rs  register.rs  steam.rs  steam_verify.rs  totp.rs  types.rs  validation.rs  verification.rs
crates/opencorde-api/src/routes/automod/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/channels/: handlers.rs  mod.rs  types.rs  validation.rs
crates/opencorde-api/src/routes/dms/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/e2ee/: groups.rs  key_packages.rs  mod.rs
crates/opencorde-api/src/routes/events/: handlers.rs  mod.rs  rsvp.rs  types.rs
crates/opencorde-api/src/routes/federation/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/forum/: auth_check.rs  handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/friends/: accept.rs  block.rs  list.rs  mod.rs  pending.rs  remove.rs  request.rs  search.rs  types.rs
crates/opencorde-api/src/routes/mesh/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/messages/: edit_delete.rs  handlers.rs  mod.rs  send_list.rs  types.rs  validation.rs
crates/opencorde-api/src/routes/moderation/: audit_mod.rs  mod.rs
crates/opencorde-api/src/routes/recordings/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/servers/: handlers.rs  mod.rs  types.rs  validation.rs
crates/opencorde-api/src/routes/slash_commands/: create.rs  delete.rs  dispatch.rs  list.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/stage/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/threads/: handlers.rs  mod.rs  types.rs
crates/opencorde-api/src/routes/users/: avatar.rs  delete.rs  get.rs  mod.rs  update.rs
crates/opencorde-api/src/routes/voice/: handlers.rs  livekit.rs  mod.rs  types.rs
crates/opencorde-api/src/ws/: INDEX.md  dispatch.rs  events.rs  handler.rs  mod.rs
crates/opencorde-api/tests/: integration_jwt_auth.rs  jwt_tests.rs
crates/opencorde-bridge/: Cargo.toml  INDEX.md
crates/opencorde-bridge/src/: config.rs  main.rs
crates/opencorde-bridge/src/discord/: INDEX.md  api.rs  gateway.rs  mapper.rs  mod.rs  puppet.rs
crates/opencorde-bridge/src/steam/: INDEX.md
crates/opencorde-core/: Cargo.toml  INDEX.md
crates/opencorde-core/src/: events.rs  gateway.rs  keypair.rs  lib.rs  mesh.rs  password.rs  permission_compute.rs  permissions.rs  snowflake.rs
crates/opencorde-core/src/models/: INDEX.md  channel.rs  invite.rs  member.rs  message.rs  mod.rs  role.rs  server.rs  user.rs  voice_state.rs
crates/opencorde-crypto/: Cargo.toml  INDEX.md
crates/opencorde-crypto/src/: encrypt.rs  error.rs  file_crypto.rs  group.rs  key_package.rs  lib.rs
crates/opencorde-db/: Cargo.toml  INDEX.md
crates/opencorde-db/migrations/: 001_users.sql  002_servers.sql  003_channels.sql  004_messages.sql  005_roles.sql  006_server_members.sql  007_invites.sql  008_voice_states.sql  009_files.sql  010_mesh_peers.sql  011_reactions.sql  012_read_state.sql  013_bans.sql  014_dm_channels.sql  015_message_replies.sql  016_pinned_messages.sql  017_threads.sql  018_webhooks.sql  019_friends.sql  020_events.sql  021_nsfw_channels.sql  022_server_discovery.sql  023_automod.sql  024_slash_commands.sql  025_forum_channels.sql  026_stage_channels.sql  027_audit_log.sql  028_server_emojis.sql  029_password_reset.sql  031_e2ee_key_packages.sql  032_e2ee_groups.sql  033_email_verification.sql  034_bridge_channel_mappings.sql  035_bridge_ghost_users.sql  036_steam_auth.sql  037_recordings.sql  038_push_tokens.sql  039_channel_permission_overrides.sql  040_server_moderation_settings.sql  041_refresh_tokens.sql  (+10 more)
crates/opencorde-db/migrations_applied/: 030_user_profile_extensions.sql
crates/opencorde-db/src/: lib.rs
crates/opencorde-db/src/repos/: INDEX.md  audit_repo.rs  automod_repo.rs  ban_repo.rs  channel_override_repo.rs  channel_repo.rs  dm_federated_repo.rs  dm_repo.rs  emoji_repo.rs  event_repo.rs  forum_repo.rs  invite_repo.rs  member_repo.rs  mesh_peer_repo.rs  message_repo.rs  mod.rs  pin_repo.rs  reaction_repo.rs  read_state_repo.rs  refresh_token_repo.rs  relationship_repo.rs  role_repo.rs  server_repo.rs  slash_command_repo.rs  thread_repo.rs  user_repo.rs  voice_state_repo.rs  webhook_repo.rs
crates/opencorde-search/: Cargo.toml  INDEX.md
crates/opencorde-search/src/: indexer.rs  lib.rs  schema.rs  searcher.rs
(+190 files in other folders)
