[package]
name = "opencorde-api"
version.workspace = true
edition.workspace = true
license.workspace = true

# Axum REST API + WebSocket gateway

[[bin]]
name = "opencorde-api"
path = "src/main.rs"

[dependencies]
opencorde-core = { path = "../opencorde-core" }
opencorde-db = { path = "../opencorde-db" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
